Kubernetes/02-cs_mongodb/02-cs_mongodb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cs-ingress
  namespace: dt
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/enable-rewrite-log: "true"

spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /cs(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: cs-svc
            port:
              number: 27018
